--- a/index.html
+++ b/index.html
@@ -1,29 +1,128 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Equipe Alura Start</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">eron domingues</li>
-            <li class="cabecalho-lista-item">Vitor Hugo Wolfart</var>/li>
+            <li class="cabecalho-lista-item"><a href="#escola">eron domingues</a></li>
+            <li class="cabecalho-lista-item"><a href="#estudante">VITOR HUGO WOLFART</a></li>
         </ul>
     </header>
-
-
-    <section class="eron domingues">
-        <div class="eron domingues-div-conteudo">
-            <h2 class="eron domingues-titulo">Sobre o eron domingues</h2>
-            <p class="eron domingues-texto-um">o eron domingues foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="eron domingues-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+    <section id="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola eron domingues tem 60 nanos de idade e ja passaram mais de 24 mil alunos por ela.</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série D.sempre tiramos as melhores notas da escola e sempre ganhamos os desafios!</p>
         </div>
-        <img class="eron domingues-imagem" src="Formula-bro.png" alt="Professora no quadro">
+        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
+
+    <section id="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
+                <h3 class="estudante-nome">Marcelo</h3>
+                <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://linkedin.com/marcelopaludetto"><img class="esstudante-icone" src="linkedin.png"
+                        alt="icone linkedin"></a>
+                <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
+                <h3 class="estudante-nome">VITOR HUGO WOLFART</h3>
+                <a href="https://github.com/estudante-L"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/estudante-marcomini-de-lima/"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </di
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
+                <h3 class="estudante-nome">Lizandra</h3>
+                <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
+                <h3 class="estudante-nome">Joice</h3>
+                <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
+                        alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
+                <h3 class="estudante-nome">Maria</h3>
+                <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png"
+                        alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
+                <h3 class="estudante-nome">Olivia</h3>
+                <img class="estudante-icone" src="github.png" alt="icone github">
+                <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
+                        alt="icone linkedin"></a>
+                <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
+                <h3 class="estudante-nome">Rafaela</h3>
+                <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
+                <h3 class="estudante-nome">Thais</h3>
+                <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+
+        </div>
+    </section>
+    
+    <footer class="rodape">
+        <img class="rodape-imagem" src="alurastart logo.png" alt="logo da alura start">
+    </footer>
 </body>
 
 </html>
